Update project links and tech stack in index.html

--- a/index.html
+++ b/index.html
@@ -93,15 +93,20 @@
         <div class="project-card">
             <h3>Gym Web Application</h3>
             <p>Designed a responsive interface with sections such as trainers, schedules and membership details. Created a clear “About Us” page and ensured smooth mobile experience.</p>
-            <p><strong>Tech Stack:</strong> HTML, CSS, JavaScript, React.js</p>
-            <a href="https://github.com/Anurag7694/Gym-Web-Application" target="_blank" class="project-btn">View on GitHub</a>
+            <p><strong>Tech Stack:</strong> HTML, CSS, JavaScript</p>
+            <a https://github.com/Anurag7694/The_gym_web" target="_blank" class="project-btn">View on GitHub</a>
+             <br/>
+            <a href="https://anurag7694.github.io/The_gym_web/" target="_blank" class="project-btn">View on Live</a>
         </div>
 
         <div class="project-card">
             <h3>Café Website</h3>
             <p>Created a clean website layout for a café showcasing ambience, story and services. Designed mobile-friendly pages and planned menu and review sections.</p>
             <p><strong>Tech Stack:</strong> HTML, CSS, JavaScript</p>
-            <a href="https://github.com/Anurag7694/Cafe-Website-" target="_blank" class="project-btn">View on GitHub</a>
+            <a href="https://github.com/Anurag7694/Cafe_Website" target="_blank" class="project-btn">View on GitHub</a>
+             <br/>
+            <a href="https://anurag7694.github.io/Cafe_Website/" target="_blank" class="project-btn">View on Live</a>
+        </div>
         </div>
 
     </section>
