Add Excel and Power BI to skills list

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="skill-box">
             <h3>Tools</h3>
-            <p>VS Code, Git/GitHub</p>
+            <p>VS Code, Git/GitHub, Excel ,Power BI</p>
         </div>
 
         <div class="skill-box">
